--- a/webapp/static/pc/course-chrome.html
+++ b/webapp/static/pc/course-chrome.html
@@ -103,7 +103,7 @@
 					<ul>
 						<li><i>1</i>
 							<p>
-								打开chrome浏览器，点击右侧链接进行下载： <a href="http://xmluren.com/fanli/apps/Chrome.crx" target="_blank" class="hover-shadow">下载【溜溜返利】Chrome浏览器版</a>
+								打开chrome浏览器，点击右侧链接进行下载： <a href="./static/pc/apps/guangfish.crx" target="_blank" class="hover-shadow">下载【溜溜返利】Chrome浏览器版</a>
 							</p> <!-- <p>
 							<img src="./img/orderList.png" alt="">
 						</p> --></li>
