--- a/webapp/static/front/query.html
+++ b/webapp/static/front/query.html
@@ -50,6 +50,11 @@
 	<script type='text/javascript' src='js/jquery.min.js' charset='utf-8'></script>
 	<script type='text/javascript' src='js/light7.js' charset='utf-8'></script>
 	<script>
+	    function drump(link){
+	 	  //location.href=link;
+	    	window.open(link);
+	    }
+	
 		function fetch() {
 			var div=document.createElement("div");
 			div.id="waiting";
