--- a/webapp/static/front/query.html
+++ b/webapp/static/front/query.html
@@ -56,6 +56,8 @@
 	    }
 	
 		function fetch() {
+			$('#e-c').remove();
+			
 			var div=document.createElement("div");
 			div.id="waiting";
 			document.body.appendChild(div);
