--- a/webapp/static/front/query.html
+++ b/webapp/static/front/query.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">  
-<title>逛鱼查返利</title> 
+<meta http-equiv="X-UA-Compatible" content="IE=edge">   
+<title>逛鱼搜索</title> 
 <meta name="viewport"
 	content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 <link rel="shortcut icon" href="favicon.ico">
