--- a/webapp/static/front/query.html
+++ b/webapp/static/front/query.html
@@ -67,7 +67,7 @@
 			//加载中
 			$('#result')
 					.html(
-							"<div id='waiting'><img src='timg.gif' height='200' width='200'></div>");
+							"<div id='waiting'><img src='timg.gif'></div>");
 			if (producturl) {
 				$
 						.ajax({
